# wosx

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
demo_apps/: CMakeLists.txt
demo_apps/basic_2d/: README.md  demo.cpp  demo.py  gpu_demo.cpp  gpu_demo.py  gpu_model_problem.h  model_problem.h  wosx-pde-definition.slang
demo_apps/basic_2d/model_problems/engine/: bvc.json  rws.json  wost.json
demo_apps/basic_2d/model_problems/nautilus/: wos.json
demo_apps/electrostatics/: README.md  app.cpp  app.py  config.json  wosx-pde-definition.slang
demo_apps/geometric_deformation/: README.md  app.cpp  arap.h  config.json  harmonic-samples-generation.cs.slang  harmonic_coordinates_solver.h  harmonic_samples_generation.h  wosx-pde-definition.slang
demo_apps/potential_flow/: README.md  app.cpp  app.py  config.json  wosx-pde-definition.slang
demo_apps/thermal_conduction/: README.md  app.cpp  app.py  config.json  wosx-pde-definition.slang
demo_apps/thermal_conduction/data/: camera_view_0.json  camera_view_1.json  camera_view_2.json  camera_view_3.json  camera_view_4.json
demo_apps/utils/: colormap.h  config.h  grid.h  image.h
include/wosx/: wosx.h  wosx_gpu.h
include/wosx/core/: bessel.h  distributions.h  geometric_queries.h  geometry_helpers.h  pde.h  sampling.h
include/wosx/gpu/: wosx.slang
include/wosx/gpu/core/: bessel.slang  distributions.slang  geometric-queries.slang  math-helpers.slang  pde.slang  sampling.slang
include/wosx/gpu/entrypoints/: boundary-value-caching.cs.slang  boundary_value_caching.h  distance-queries.cs.slang  distance_queries.h  point_estimation.h  walk-on-spheres.cs.slang  walk-on-stars.cs.slang
include/wosx/gpu/entrypoints/common-shaders/: point-estimation.cs.slang  rng-seeding.cs.slang  sample-points-generation.cs.slang  sample-points-utils.cs.slang  sample-statistics-utils.cs.slang
include/wosx/gpu/entrypoints/interop/: dense_grid.h  geometric_queries.h  library_paths.h  pde.h  reflectance_bvh.h  sample_and_evaluation_points.h  samplers.h  solvers.h  supported_datatypes.h  task_handle.h
include/wosx/gpu/point-estimation/: common.slang  walk-on-spheres.slang  walk-on-stars.slang
include/wosx/gpu/utils/: dense-grid.slang  fcpw-geometric-queries.slang  float-array.slang  sdf-grid-geometric-queries.slang
include/wosx/gpu/utils/reflectance-boundary-bvh/: bvh.slang  geometry.slang  robin-bounds.slang
include/wosx/gpu/variance-reduction/: boundary-samplers.slang  boundary-value-caching.slang  domain-samplers.slang  kelvin-transform.slang
include/wosx/point_estimation/: common.h  reverse_walk_on_stars.h  walk_on_spheres.h  walk_on_stars.h
include/wosx/utils/: dense_grid.h  fcpw_geometric_queries.h  nearest_neighbor_finder.h  progress.h  sdf_grid_geometric_queries.h
include/wosx/utils/reflectance_boundary_bvh/: baseline.h  bvh.h  geometry.h  mbvh.h  robin_bounds.h
include/wosx/variance_reduction/: boundary_samplers.h  boundary_value_caching.h  domain_samplers.h  kelvin_transform.h  reverse_walk_solver.h
python/: CMakeLists.txt  wosx_bindings.cpp  wosx_bindings.h  wosx_gpu_bindings.h
python/wosx/: __init__.py
